--- a/.github/workflows/ARMv8-Package.yml
+++ b/.github/workflows/ARMv8-Package.yml
@@ -97,7 +97,7 @@ jobs:
         allowUpdates: true
         removeArtifacts: true
         tag: ARMv8_${{ env.VERSION }}
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB1_TOKEN }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         body: |
           **This is OpenWrt Firmware for Armvirt 64**
