--- a/.github/workflows/ARMv8-Package-panther-x2.yml
+++ b/.github/workflows/ARMv8-Package-panther-x2.yml
@@ -95,7 +95,7 @@ jobs:
         name: R${{ env.DATE }} for ARMv8_${{ env.VERSION }}
         allowUpdates: true
         removeArtifacts: true
-        tag: ARMv8_${{ env.VERSION }} - panther-x2
+        tag: ARMv8_${{ env.VERSION }} panther-x2
         token: ${{ secrets.GITHUB1_TOKEN }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         body: |
