--- a/configs/armv8-plus.config
+++ b/configs/armv8-plus.config
@@ -245,6 +245,7 @@ CONFIG_PACKAGE_exfat-fsck=y
 CONFIG_PACKAGE_exfat-mkfs=y
 CONFIG_PACKAGE_f2fs-tools=y
 CONFIG_PACKAGE_f2fsck=y
+CONFIG_PACKAGE_dtc=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_fdk-aac=y
 CONFIG_PACKAGE_file=y
